@@ -24,6 +24,9 @@ documents those changes that are of interest to users and admins.
     and every job on the system happens to be the same size.
  -- Removed bad #define _SLURMD_H from slurmd/get_mach_stat.h.  Didn't appear
     to cause any problems being there, just incorrect syntax.
+ -- Validate the job ID when salloc or srun receive an SRUN_JOB_COMPLETE RPC to
+    avoid killing the wrong job if the original command exits and the port gets
+    re-used by another command right away.
 
 * Changes in SLURM 2.1.11-2
 ===========================
